# mongoclasses

./: .python-version  README.md  mkdocs.yml  pyproject.toml
docs/: apiref.md  conversions.md  index.md
docs/api/: mongoclasses.md  operations.md  sync_methods.md  utilities.md
docs/api/operators/update/: array.md  bit.md  field.md
src/mongoclasses/: __about__.py  __init__.py  __init__.pyi  asyncio.py  asyncio.pyi  converters.py  converters.pyi  cursors.py  cursors.pyi  dataclass.py  dataclass.pyi  mongoclasses.py  mongoclasses.pyi  operations.py  operations.pyi  serialization.py  serialization.pyi  sync.py  sync.pyi  types.py  update.py  update.pyi  utils.py  utils.pyi
src/mongoclasses/methods/: __init__.py  asyncio.py  asyncio.pyi  sync.py  sync.pyi
src/mongoclasses/operators/: update.py  update.pyi
tests/: test_async_operations.py  test_asyncio.py  test_converters.py  test_dataclass.py  test_fromdict.py  test_mongoclass.py  test_mongoclass_instances.py  test_mongoclasses.py  test_operations.py  test_serializations.py  test_sync.py  test_types.py  test_update.py  test_update_operators.py  test_utils.py
