[tool.poetry]
name = "mongoclasses"
version = "0.3.0"
description = ""
license = "MIT"
authors = ["Ryan Kroon <rykroon.tech@gmail.com>"]
readme = "README.md"
repository = "https://github.com/rykroon/mongoclasses"
documentation = "https://github.com/rykroon/mongoclasses#readme"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^3.1.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
coverage = "^7.2.7"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
