[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongoclasses"
dynamic = ["version"]
description = "A lightweight tool for performing MongoDB operations on python dataclasses."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ryan Kroon", email = "rykroon.tech@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "cattrs>=23, <24",
  "motor>=3.3.0, <4",
  "typing-extensions==4.*"
]

[project.urls]
Documentation = "https://github.com/rykroon/mongoclasses#readme"
Issues = "https://github.com/rykroon/mongoclasses/issues"
Source = "https://github.com/rykroon/mongoclasses"

[tool.hatch.version]
path = "src/mongoclasses/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "coverage",
]
[tool.hatch.envs.test.scripts]
test = "coverage run --source src -m pytest"
cov-report = "coverage report -m"

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.type]
python="3.12"
dependencies = [
  "mypy"
]
[tool.hatch.envs.type.scripts]
check = "mypy --strict src/mongoclasses"

[tool.hatch.envs.docs]
python="3.11"
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve"
